--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@ h1 {
 
 /* Subtitle */
 h2 {
-  
+  font-family: "Times New Roman";
+  font-size: 35px;
+  font-style: italic;
 }
 
 /* Page Header */
